# smart-home-mcp

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  home.yaml.example  pyproject.toml
src/midea_mcp/: cloud_session.py  config.py  device_cache.py  device_manager.py  server.py
src/smart_home_mcp/: config.py  home_config.py  home_plugin.py  models.py  plugin_base.py  server.py
src/smart_home_mcp/brands/: __init__.py
src/smart_home_mcp/brands/midea_ac/: __init__.py  device_manager.py  plugin.py
src/smart_home_mcp/brands/virtual/: __init__.py  device_store.py  devices.yaml  plugin.py
