[project]
name = "midea-mcp"
version = "0.1.0"
description = "MCP Server for controlling Midea smart air conditioners via LAN and Cloud"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.26.0",
    "midea-beautiful-air>=0.10.5",
    "python-dotenv>=1.2.2",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/midea_mcp"]
